Mostly working android version.